--- a/app/views/uploadFile.jade
+++ b/app/views/uploadFile.jade
@@ -1,9 +1,12 @@
 extends ./base
 
-form.pure-form.pure-form-aligned
-	fieldset
-		div.pure-control-group
-			label Upload CSV fieldset
-			input(type='file', name='csvFile', id='csvFile')
-		div.pure-controls
-			button.pure-button.pure-button-primary(type='submit')
+block content
+	h1=title
+
+	form.pure-form.pure-form-aligned
+		fieldset
+			div.pure-control-group
+				label Upload CSV fieldset
+				input(type='file', name='csvFile', id='csvFile')
+			div.pure-controls
+				button.pure-button.pure-button-primary(type='submit') Submit
