--- a/app/views/404.jade
+++ b/app/views/404.jade
@@ -3,7 +3,7 @@ extends ./base
 block content
   title oops 404 
 
-  body
+  body.404
     div.wrap
       p.silly-text OOPS! - Could not Find it
       img(src='img/404.png')
