Add links for other views

--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -8,3 +8,8 @@ div.header
     ul.pure-menu-list.menu
       li.pure-menu-item
         a(href="/").pure-menu-link Home
+      li.pure-menu-item
+        a(href="/colleges").pure-menu-link Colleges
+      li.pure-menu-item
+        a(href="/upload").pure-menu-link File Upload
+
