Added more to layout, and more styles

--- a/app/views/uploadFile.jade
+++ b/app/views/uploadFile.jade
@@ -1,12 +1,13 @@
 extends ./base
 
 block content
-	h1=title
+  div.wrap
+   h1.spacing=title
 
-	form.pure-form.pure-form-aligned
-		fieldset
-			div.pure-control-group
-				label Upload CSV fieldset
-				input(type='file', name='csvFile', id='csvFile')
-			div.pure-controls
-				button.pure-button.pure-button-primary(type='submit') Submit
+   form.pure-form.pure-form-aligned
+      fieldset
+       div.pure-control-group
+          label Upload CSV
+          input(type='file', name='csvFile', id='csvFile')
+       div.pure-controls
+          button.pure-button.pure-button-primary(type='submit') Submit
