--- a/app/views/listColleges.jade
+++ b/app/views/listColleges.jade
@@ -1,7 +1,7 @@
 extends ./base
 
 block content
-	h1=title
+	h1.spacing=title
 	each college in colleges
 		table.pure-table.pure-table-bordered
 			tr
