Added animate css and fadeIn title on all pages

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -2,7 +2,7 @@ extends ./base
 
 block content
   div.pure-g.container
-    h1.spacing=title
+    h1.spacing.animated.fadeIn=title
     div.pure-u-1-1
       p
         | Your challenge is to create a program that can display an index/directory view of records from the Integrated Post Secondary Educational Data System.  This process requires you to import a CSV file that contains the data, and a CSV file that is the corresponding data dictionary for that data.  You must then display a directory of all the colleges by name that has a link to click, which takes you to a detailed table view of that colleges records.  The table header fields should be the full title as displayed in the data dictionary and not the abbreviated heading found in the CSV data file.
