--- a/app/views/uploadFile.jade
+++ b/app/views/uploadFile.jade
@@ -2,7 +2,7 @@ extends ./base
 
 block content
   div.wrap
-   h1.spacing=title
+   h1.spacing.animated.fadeIn=title
 
    form.pure-form.pure-form-aligned
       fieldset
