--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -2,6 +2,7 @@ head
   link(href='http://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister', rel='stylesheet', type='text/css')
   link(rel="stylesheet", href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css")
   link(href='/css/styles.css' rel='stylesheet', type='text/css')
+  link(href='/css/animate.min.css', rel='stylesheet', type='text/css')
 
 div.header
   div.pure-menu.pure-menu-horizontal
