--- a/app/views/404.jade
+++ b/app/views/404.jade
@@ -3,10 +3,70 @@ extends ./base
 block content
   title oops 404 
 
-  body.404
-    div.wrap
-      p.silly-text OOPS! - Could not Find it
-      img(src='img/404.png')
-      div.sub
-        p
-         a(href='/') Home
+  //- body.404
+  //-   div.wrap
+  //-     p.silly-text OOPS! - Could not Find it
+  //-     img(src='img/404.png')
+  //-     div.sub
+  //-       p
+  //-        a(href='/') Home
+  body
+    a.viewFull(href='http://codepen.io/ZonFire99/full/njdls/', target='_parent') View in full it looks way better :)
+    .error
+      .wrap
+        .404
+          pre
+          code
+          span.green
+            &lt;
+          span.green
+            | DOCTYPE html 
+        br
+        span.info
+          br
+          span.orange  
+          br
+          span.orange
+
+
+
+
+<a href="http://codepen.io/ZonFire99/full/njdls/" class="viewFull" target="_parent">View in full it looks way better :)</a>
+
+<div class="error">
+
+<div class="wrap">
+  <div class="404">
+    <pre><code>
+   <span class="green">&lt;!</span><span>DOCTYPE html</span><span class="green">&gt;</span>
+<span class="orange">&lt;html&gt;</span>
+    <span class="orange">&lt;style&gt;</span>
+   * {
+            <span class="green">everything</span>:<span class="blue">awesome</span>;
+}
+     <span class="orange">&lt;/style&gt;</span>
+ <span class="orange">&lt;body&gt;</span> 
+              ERROR 404!
+        FILE NOT FOUND!
+        <span class="comment">&lt;!--The file you are looking for, 
+          is not where you think it is.--&gt;
+    </span>
+ <span class="orange"></span> 
+        
+
+
+</div>
+<br />
+<span class="info">
+<br />
+
+<span class="orange">&nbsp;&lt;/body&gt;</span>
+
+<br/>
+      <span class="orange">&lt;/html&gt;</span>
+    </code></pre>
+  </div>
+</div>
+
+
+</span>
