Added file upload using ajax and redirect

--- a/app/views/includes/footer.jade
+++ b/app/views/includes/footer.jade
@@ -4,3 +4,6 @@ div.footer
       li 
         p.legal-copyright
           | Written by Giuseppe DiBella & Binoy Patel
+
+script(src='/lib/jquery/dist/jquery.min.js' type='text/javascript')
+script(src='/js/formUpload.js' type='text/javascript')
