--- a/app/views/includes/footer.jade
+++ b/app/views/includes/footer.jade
@@ -6,4 +6,5 @@ div.footer
           | Written by Giuseppe DiBella & Binoy Patel
 
 script(src='/lib/jquery/dist/jquery.min.js' type='text/javascript')
+script(src='/js/jquery.form.min.js' type='text/javascript')
 script(src='/js/formUpload.js' type='text/javascript')
