--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -1,4 +1,5 @@
 head
+  title= title
   link(href='http://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister', rel='stylesheet', type='text/css')
   link(rel="stylesheet", href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css")
   link(href='/css/styles.css' rel='stylesheet', type='text/css')
