--- a/app/views/listColleges.jade
+++ b/app/views/listColleges.jade
@@ -1,12 +1,12 @@
 extends ./base
 
 block content
-  h1.spacing.animated.fadeIn=title
   div.pure-g
+    h1.spacing.animated.fadeIn.pure-u-1=title
     div.pure-u-7-24.center
       table.pure-table.pure-table-bordered
         each college in colleges
           tr
             td #{college.INSTNM}
-      
+        
 
