--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -73,3 +73,50 @@ ul.menu li a:hover{
 	margin-left: auto;
 	margin-right: auto;
 }
+
+
+#loader{
+	position:fixed;
+	margin:0 auto;
+	left:0;
+	right:0;
+	top:50%;
+	margin-top:-30px;
+	width:60px;
+	height:60px;
+    list-style:none;
+}
+
+#loader li{
+  background-color:#ffffff;
+  width:10px;
+  height:10px;
+  float:left;
+  margin-right:5px;
+  box-shadow: 0px 80px 20px rgba(0,0,0,0.2);
+}
+
+@-webkit-keyframes 'laadbalk' {
+	0%{
+		height: 10px;
+		margin-top: 25px;
+	}
+	50%{
+		height:50px;
+		margin-top: 0px;
+	}
+	100%{
+		height: 10px;
+		margin-top: 25px;
+	}
+}
+
+#loader li:nth-child(1){
+  -webkit-animation: laadbalk 0.6s ease-in-out infinite 0;
+}
+#loader li:nth-child(2){
+  -webkit-animation: laadbalk 0.6s ease-in-out infinite -0.2s;
+}
+#loader li:nth-child(3){
+  -webkit-animation: laadbalk 0.6s ease-in-out infinite -0.4s;
+}
