--- a/app/views/uploadFile.jade
+++ b/app/views/uploadFile.jade
@@ -6,6 +6,11 @@ block content
 
    form#form.pure-form.pure-form-aligned(action='/upload' method='POST' enctype="multipart/form-data")
       fieldset
+       div#loading-text
+         ul
+           li
+           li
+           li
        div.pure-control-group
           label Upload CSV
           input(type='file', name='csvFile', id='csvFile')
