--- a/app/views/collegeDetail.jade
+++ b/app/views/collegeDetail.jade
@@ -1,10 +1,12 @@
 extends ./base
 
 block content
-  div.pure-g
+  div.pure-g.container
     h1.spacing.animated.fadeIn.pure-u-1=title
     div.pure-u-7-24.center
       table.pure-table.pure-table-bordered
-        each detail in details
+        each value, key in details
           tr
-            td #{detail.INSTNM}
+            td #{key}
+            td #{value}
+
