Added structure for rendering the charts for the three different questions

--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -4,6 +4,7 @@ head
   link(rel="stylesheet", href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css")
   link(href='/css/styles.css' rel='stylesheet', type='text/css')
   link(href='/lib/animate.css/animate.min.css', rel='stylesheet', type='text/css')
+  
 
 div.header
   div.pure-menu.pure-menu-horizontal
@@ -12,4 +13,10 @@ div.header
         a(href="/").pure-menu-link Home
       li.pure-menu-item
         a(href="/colleges").pure-menu-link Colleges
+      li.pure-menu-item
+        a(href="/q1").pure-menu-link Question 1
+      li.pure-menu-item
+        a(href="/q2").pure-menu-link Question 2
+      li.pure-menu-item
+        a(href="/q3").pure-menu-link Question 3
 
