--- a/app/views/includes/footer.jade
+++ b/app/views/includes/footer.jade
@@ -1,10 +1,12 @@
-div.footer
-  div.pure-u-1-3
-    ul.pure-menu-list.menu
-      li 
-        p.legal-copyright
-          | Written by Giuseppe DiBella & Binoy Patel
+block footer
+  div.footer
+    div.pure-u-1-3
+      ul.pure-menu-list.menu
+        li 
+          p.legal-copyright
+            | Written by Giuseppe DiBella & Binoy Patel
 
-script(src='/lib/jquery/dist/jquery.min.js' type='text/javascript')
-script(src='/js/jquery.form.min.js' type='text/javascript')
-script(src='/js/formUpload.js' type='text/javascript')
+  script(src='/lib/jquery/dist/jquery.min.js' type='text/javascript')
+  script(src='/js/jquery.form.min.js' type='text/javascript')
+  script(src='/js/formUpload.js' type='text/javascript')
+  script(src='/lib/highcharts/highcharts.js', type='text/javascript')
